<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="1dp"
    app:cardElevation="1dp"
    >

    <LinearLayout
        android:id="@+id/linearequipos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="3dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/nombre" />

            <TextView
                android:id="@+id/pj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pj" />

            <TextView
                android:id="@+id/pg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text="@string/pg" />

            <TextView
                android:id="@+id/pe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text="@string/pe" />

            <TextView
                android:id="@+id/pp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text="@string/pp" />

            <TextView
                android:id="@+id/gf"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text="@string/gf"
                android:textColor="@color/gf" />

            <TextView
                android:id="@+id/ge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text="@string/ge"
                android:textColor="@color/ge" />

            <TextView
                android:id="@+id/puntos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center|center_horizontal"
                android:text="@string/puntos"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>