<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/cancha">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:background="@drawable/cancha"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nfecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"

            android:text="@string/fecha_1"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="60dp"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/equipo1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/equipo1"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/vs"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/equipo2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/equipo22"

                android:textColor="@android:color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/estadio_ciudad_de_celica"

                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/fechapartido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="right"
                android:text="@string/_11_de_junio"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView >