<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Navegador.Menu.EnviarSugerencias.Sugerencias">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/intro_lottie_animation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:lottie_autoPlay="true"
        app:lottie_fileName="mailsent.json"
        app:lottie_loop="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:id="@+id/grupocorreo"
        android:orientation="vertical"
        android:weightSum="9">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|top"
            android:text="@string/sugerencias"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/realiza_tus_sugerencias_sera_ungusto_atenderte" />

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ingresa_tu_correo"
            android:inputType="textEmailAddress" />


    </com.google.android.material.textfield.TextInputLayout>



        <EditText
            android:id="@+id/mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:ems="10"
            android:hint="@string/ingresa_tus_sugerencias"
            android:inputType="textMultiLine" />

        <!--        <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:visibility="invisible"
                    app:lottie_autoPlay="true"
                    app:lottie_fileName="hello_world.json"
                    app:lottie_loop="true"
                    tools:ignore="MissingConstraints" />-->

        <Button
            android:id="@+id/enviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/enviar" />
    </LinearLayout>

</FrameLayout>